[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.15",
    "crypto>=1.4.1",
    "email-validator>=2.2.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "motor>=3.7.1",
    "psycopg2-binary>=2.9.10",
    "pycryptodome>=3.23.0",
    "pymongo>=4.14.0",
    "requests>=2.32.4",
]
